# JetReconstructionBenchmarks.jl

./: .gitignore  .gitmodules  Project.toml  README.md
EDM4hep/: Project.toml
EDM4hep/src/: EDM4hepJetsTimed.jl
data/: .gitignore  events-summary-ee-pp.csv  events-summary-ee.csv
fastjet/: .gitignore  CMakeLists.txt  FastJet-wapper.jl  Makefile  README.md  fastjet-finder.cc
fastjet/src/: fastjet-exclusive.cc  fastjet-finder.cc  fastjet-inclusive.cc  fastjet-utils.cc  fastjet-utils.hh
genevt/src/: .gitignore  Makefile  genevts-AA.cc  genevts-ee.cc  genevts-pp.cc
results/: .gitignore  chep-2024-ee-nb.jl  chep-2024-pp-nb.jl  chep-2024-threading-nb.jl  fastjet-best-AA.csv  fastjet-n2tiled-AA.csv  julia-n2plain-AA.csv  julia-n2plain.csv  julia-n2tiled-AA.csv  julia-n2tiled.csv  juliahep-2024-ee-nb.jl  plot-results-AA.ipynb  plot-results.ipynb  test.csv
results-v0/: chep-2024-pp-nb.jl  chep-2024-substructure-nb.jl  fastjet-n2plain-AA.csv  fastjet-n2plain.csv  fastjet-n2tiled.csv  plot-results-all.ipynb  threads-julia-pp-30TeV.csv  threads.ipynb  wlcg-hsf-2025-energy-consumption.jl
results-v0/Alma9-Ryzen7-5700G-Julia-1.11.1-JR-v0.4.3-ee/: FastJet_EEKt_Best_R0.4_P-1.0.csv  FastJet_EEKt_Best_R1.0_P-1.0.csv  FastJet_EEKt_Best_R1.5_P-1.0.csv  FastJet_EEKt_Best_R2.0_P0.0.csv  FastJet_EEKt_Best_R4.0_P-1.0.csv  FastJet_EEKt_Best_R4.0_P0.0.csv  Julia_EEKt_Best_R0.2_P0.0.csv  Julia_EEKt_Best_R4.0_P1.0.csv  thread-scaling.csv
results-v0/Alma9-Ryzen7-5700G-Julia-1.11.1-JR-v0.4.3-pp/: FastJet_AntiKt_N2Plain_R1.0_P-1.0.csv  FastJet_AntiKt_N2Plain_R1.5_P-1.0.csv  (+19 more)
src/: Benchmark.jl  benchmark-substructure.jl  benchmark.jl  fastjet2json.jl  findmin-benchmark.jl  findmin-test.jl  generate-benchmarks-antikt.sh  generate-benchmarks-ee.sh  generate-benchmarks-pp.sh  generate-benchmarks.sh  hepmc32summary.jl  merge-results.jl  parse-options.jl  thread-run.jl  thread-scan.sh
(+1032 files in other folders)
